--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -19,16 +19,18 @@
                                     <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
                                 </div>
                                 <div class="card__content">
-                                    <h2 class="product__price">$
-                                        <%= product.price %>
+                                    <h2 class="product__price">
+                                        $<%= product.price %>
                                     </h2>
                                     <p class="product__description">
                                         <%= product.description %>
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <form action="/add-to-cart" method="POST">
-                                        <button class="btn">Add to Cart</button>
+                                    <a href="/products/<%= product.id %>" class="btn">View Details</a>
+                                    <form action="/cart" method="post">
+                                        <button type="submit" class="btn">Add to Cart</button>
+                                        <input type="hidden" name="productId" value="<%= product.id %>">
                                     </form>
                                 </div>
                             </article>
