--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -1,9 +1,29 @@
 <%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/orders.css">
     </head>
 
     <body>
         <%- include('../includes/navigation.ejs') %>
         <main>
-            <h1>Nothing there!</h1>
+            <% if (orders.length > 0) { %>
+                <ul class="orders">
+                    <% orders.forEach(order => { %>
+                        <li class="orders__item">
+                            <h1>Order #<%= order.id %></h1>
+                            <ul class="orders__products">
+                                <% order.products.forEach(product => { %>
+                                    <li class="orders__products-item">
+                                        <span class="orders__product-title"><%= product.title %></span>
+                                        <span class="orders__product-qty">(<%= product.orderItem.quantity %>)</span>
+                                        <span class="orders__product-price">$<%= product.price.toFixed(2) %> each</span>
+                                    </li>
+                                <% }); %>
+                            </ul>
+                        </li>
+                    <% }); %>
+                </ul>
+            <% } else { %>
+                <h1>No orders found!</h1>
+            <% } %>
         </main>
         <%- include('../includes/end.ejs') %>
